--- a/main/static/src/script/app/shared/header/header.html
+++ b/main/static/src/script/app/shared/header/header.html
@@ -7,15 +7,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a ng-click="header.gotoWelcome()" class="navbar-brand">
+      <a ng-click="header.goto(header.buttons.welcome.url)" class="navbar-brand">
         {{header.CONFIG_DB.brand_name}}
       </a>
     </div>
 
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li ng-show="header.CONFIG_DB.feedback_email">
-          <a ng-click="header.gotoFeedback()">
+        <li class="{{header.buttons.feedback.active}}" ng-show="header.CONFIG_DB.feedback_email">
+          <a ng-click="header.goto(header.buttons.feedback.url)">
             <span class="fa fa-comment"></span> Feedback
           </a>
         </li>
@@ -23,8 +23,10 @@
 
       <!-- Show only if user is signed in -->
       <ul class="nav navbar-nav navbar-right">
-        <li class="">
-          <a href=""><span class="fa fa-sign-in"></span> Sign in</a>
+        <li class="{{header.buttons.signin.active}}">
+          <a ng-click="header.goto(header.buttons.signin.url)">
+            <span class="fa fa-sign-in"></span> Sign in
+          </a>
         </li>
       </ul>
     </nav>
