Messing with login. We might be going the completely wrong direction :)

--- a/main/static/src/script/app/shared/header/header.html
+++ b/main/static/src/script/app/shared/header/header.html
@@ -23,8 +23,8 @@
 
       <!-- Show only if user is signed in -->
       <ul class="nav navbar-nav navbar-right">
-        <li class="{{header.buttons.signin.active}}">
-          <a ng-click="header.goto(header.buttons.signin.url)">
+        <li>
+          <a ng-click="header.openSigninModal()">
             <span class="fa fa-sign-in"></span> Sign in
           </a>
         </li>
