Massive port of the admin section to angular tech.

--- a/main/static/src/script/app/shared/header/header.html
+++ b/main/static/src/script/app/shared/header/header.html
@@ -29,15 +29,16 @@
           <a href="/signin"><span class="fa fa-sign-in"></span> Sign in</a>
         </li>
       </ul>
+
       <ul ng-if="header.authService.userDB" class="nav navbar-nav navbar-right">
         <li uib-dropdown>
           <a href="#" uib-dropdown-toggle>{{header.authService.userDB.name}}<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li ng-if="header.authService.userDB.admin">
-              <a ng-href="/admin" target="_self"><span class="fa fa-lock"></span> Admin</a>
+              <a href="/admin"><span class="fa fa-lock"></span> Admin</a>
             </li>
             <li ng-if="header.authService.userDB.admin" class="hide">
-              <a ng-href="/search"><span class="fa fa-search"></span> Search</a>
+              <a href="/search"><span class="fa fa-search"></span> Search</a>
             </li>
             <li>
               <a href="/signout" target="_self"><span class="fa fa-sign-out"></span> Sign out</a>
@@ -45,7 +46,6 @@
           </ul>
         </li>
       </ul>
-
 
     </nav>
   </div>
