Synchronous user_db login, and hard redirect to server side template for login.

--- a/main/static/src/script/app/shared/header/header.html
+++ b/main/static/src/script/app/shared/header/header.html
@@ -26,7 +26,7 @@
       <!-- TODO: Implement the user dropdown menu here. -->
       <ul ng-if="!header.authService.userDB" class="nav navbar-nav navbar-right">
         <li>
-          <a href="/signin"><span class="fa fa-sign-in"></span> Sign in</a>
+          <a href="/signin" target="_self"><span class="fa fa-sign-in"></span> Sign in</a>
         </li>
       </ul>
 
