--- a/main/static/src/script/app/shared/header/header.html
+++ b/main/static/src/script/app/shared/header/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="navbar-header">
       <!-- TODO: Check what is happening in lower resolutions, handle toggle -->
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,7 +14,7 @@
       </a>
     </div>
 
-    <nav class="collapse navbar-collapse" role="navigation">
+    <nav class="collapse navbar-collapse" uib-collapse="isCollapsed" role="navigation">
       <ul class="nav navbar-nav">
         <li ng-if="header.CONFIG_DB.feedback_email" class="{{header.buttons.feedback.active}}">
           <a ng-href="{{header.buttons.feedback.url}}">
